Fixes sidebar nav when on small screens while also allowing markdown editor to go fullscreen.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -47,8 +47,8 @@ main {
   flex-basis: 100%;
 }
 
-.side-nav {
-  z-index: 1;
+.CodeMirror-fullscreen, .editor-toolbar.fullscreen {
+  z-index: 1000;
 }
 
 .handle-action-item-sidebar {
